# manhpt.com

./: .gitignore  CLAUDE.md  advanced_benchmark.py  advanced_benchmark_results_20260311_075832.json  benchmark_cache.py  benchmark_results_20260311_074209.json  cache_benchmark.py  docusaurus.config.js  package-lock.json  package.json  quick_cache_test.py  run_benchmark.py  wrangler.jsonc
apps/: index.md
apps/intellilead-finder/: _category_.json  intro.md  privacy-policy.md
blog/: authors.yml  tags.yml
blog/2019-02-25-su-dung-kieu-xuong-dong-lf-thay-vi-crlf-trong-git/: index.md
blog/2019-03-15-su-dung-redux-saga-ket-hop-voi-callback/: index.md
blog/2019-06-14-gitlab-workflow-1-issue-va-merge-request-va-branch/: index.md
blog/2019-06-15-git-workflow-gioi-thieu/: index.md
blog/2019-06-15-git-workflow-lam-the-nao-de-squash-commit-tai-local/: index.md
blog/2019-06-21-gitlab-cai-dat-gitlab-runner-su-dung-moi-truong-docker/: index.md
blog/2019-06-25-thay-doi-version-java-tren-macos-ma-khong-can-cai-dat-them-thu-vien/: index.md
blog/2019-08-09-cach-luu-tru-mat-khau-git-tren-linux-terminal/: index.md
blog/2019-11-30-gitlab-cai-dat-gitlab-runner-tren-moi-truong-docker-swarm/: index.md
blog/2020-02-17-su-dung-commitizen-de-commit-dung-chuan/: index.md
blog/2025-03-22-mcp-la-gi/: index.md
blog/2026-03-15-benchmark-explicit-no-streaming-no-thinking-structured-output/: .env.example  benchmark_explicit_structured_output.py  benchmark_results.json  index.md  pyproject.toml
news/: intro.md
scripts/: add-last-modified.js
utils/: benchmark_cache_results.json
(+59 files in other folders)
